Fixed th/td conversion. Added align

--- a/css/app.css
+++ b/css/app.css
@@ -681,7 +681,9 @@ span.arrow-icon {
 .dijitIocIconIocTableDelete { background-position-x: -522px; }
 .dijitIocIconIocInsertTable{ background-position: -630px -18px;}
 .dijitIocIconIocToggleTableHeader{ background-position: -558px -18px;}
-
+.dijitIocIconIocTableAlignLeft{ background-position: -342px -18px; }
+.dijitIocIconIocTableAlignCenter{ background-position: -306px -18px; }
+.dijitIocIconIocTableAlignRight{ background-position: -360px -18px; }
 
 /* Icons to show with dropdown buttons */
 .dijitAdditionalEditorIconIocBack { background-position-x: -36px; }
@@ -1664,8 +1666,21 @@ div.ioc-bootstrap table[data-editable-element]{
 }
 
 .dokuwiki .pt_taula table.inline th {
-    background-color: #AAA;    
+    background-color: #AAA;
 }
+
+.dokuwiki .pt_taula table.inline .centeralign {
+	text-align: center !important;
+}
+
+.dokuwiki .pt_taula table.inline .leftalign {
+	text-align: left !important;
+}
+
+.dokuwiki .pt_taula table.inline .rightalign {
+	text-align: right !important;
+}
+
 
 .dokuwiki .ioc_evenrow table.inline tr[class^="row"][class$="1"], 
 .dokuwiki .ioc_evenrow table.inline tr[class^="row"][class$="3"],
@@ -2111,5 +2126,8 @@ textarea.reply, .ioc-comment-toolbar, .ioc-comment.ioc-comment-body button{
 div.ioc-bootstrap .pair-label-field table[data-editable-element]{
     margin-top:3px;
 }
+
+
+
 
 /* Fi plugin comentaris */
